avoid scrollbar on print

--- a/assets/stylesheets/responsive.css
+++ b/assets/stylesheets/responsive.css
@@ -783,3 +783,11 @@
         width: 100%;
     }
 }
+
+@media print and (max-width: 899px)
+{
+  /* avoid scrollbar on print */
+  body, html {
+    height: auto;
+  }
+}
